--- a/package.json
+++ b/package.json
@@ -6,22 +6,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "dev:convex": "convex dev",
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.32.0-hackdays.0",
+    "@blocknote/mantine": "^0.32.0-hackdays.0",
+    "@blocknote/react": "^0.32.0-hackdays.0",
+    "@clerk/clerk-react": "^5.31.4",
+    "@edgestore/react": "^0.5.2",
+    "@edgestore/server": "^0.5.2",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "convex": "^1.24.1",
+    "emoji-picker-react": "^4.12.2",
+    "lucide-react": "^0.511.0",
+    "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-dropzone": "^14.3.8",
+    "react-textarea-autosize": "^8.5.9",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
+    "usehooks-ts": "^3.1.1",
+    "zod": "^3.25.48",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.0",
+    "typescript": "^5"
   }
 }
