--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "emoji-picker-react": "^4.12.2",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
