--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@blocknote/core": "^0.32.0-hackdays.0",
     "@blocknote/mantine": "^0.32.0-hackdays.0",
     "@blocknote/react": "^0.32.0-hackdays.0",
-    "@clerk/clerk-react": "^5.31.4",
+    "@clerk/nextjs": "^6.20.2",
     "@edgestore/react": "^0.5.2",
     "@edgestore/server": "^0.5.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -25,7 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "convex": "^1.24.1",
+    "convex": "1.23.0",
     "emoji-picker-react": "^4.12.2",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
